fix facebook dialog z-index

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a:hover {
   border-radius: 4px;
   font-size: 12px;
   line-height: 1.5;
-  z-index: 300;
+  z-index: 30;
 }
 
 .tooltip:after {
@@ -105,6 +105,7 @@ a:hover {
 }
 
 .fb-like {
+  z-index: 40;
   vertical-align: top;
 }
 
